Ticket [4] - Updated buisness logic after testing all CRUD operations on entities.
Modifications:
Changed logic of update method in OrderService and ProductService.
Instead of letting the method create a new product if id does not exist it now throws a ProductNotFoundException allowing for clear difference between update and save methods did the same for Order entity.

Removed non-corresponding repositories from services and instead injected into converters improving upon cleanliness and legibility of the code.

Added OrderNotModifiableException and OrderStatus(enum) in order to better control order modifications in the future

Added UserType enum for future use, next commits will decide if it makes sense to unify Seller and Buyer under a new User entity