@@ -1,30 +1,22 @@
 package com.gstore.gstoreapi.services;
 
 import com.gstore.gstoreapi.converters.ObjectConverter;
-import com.gstore.gstoreapi.converters.impl.ProductConverter;
 import com.gstore.gstoreapi.exceptions.ProductNotFoundException;
 import com.gstore.gstoreapi.models.dtos.ProductDTO;
 import com.gstore.gstoreapi.models.entities.Product;
 import com.gstore.gstoreapi.repositories.ProductRepository;
-import com.gstore.gstoreapi.repositories.SellerRepository;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final ProductConverter productConverter;
-
-    public ProductService(ProductRepository productRepository,
-                          ProductConverter productConverter) {
-        this.productRepository = productRepository;
-        this.productConverter = productConverter;
-    }
+    private final ObjectConverter<Product, ProductDTO> productConverter;
 
 
     //returns all products
@@ -35,9 +27,8 @@ public class ProductService {
         //stream converts entities into DTOs and maps into a list
         return products.stream()
                 .map(productConverter::convertFirstToSecond)
-                .collect(Collectors.toList());
+                .toList();
     }
-
 
     //method to get products from repository by its id
     public ProductDTO getProductById(Long id) {
@@ -45,15 +36,7 @@ public class ProductService {
                 .orElseThrow(ProductNotFoundException::new);
 
         return productConverter.convertFirstToSecond(product);
-
-        /*
-        Can't one just do this instead?
-
-        return productConverter.convertFirstToSecond(productRepository.findProductById(id)
-                .orElseThrow(ProductNotFoundException::new));
-        */
     }
-
 
     //method to delete product by its id
     public void deleteProductById(Long id) {
@@ -62,7 +45,6 @@ public class ProductService {
 
         productRepository.delete(product);
     }
-
 
     //method to save products
     public void saveProduct(@Valid ProductDTO productDTO) {
@@ -73,7 +55,6 @@ public class ProductService {
         productRepository.save(product);
     }
 
-
     //updates a specific product based on an id and DTO containing new details
     public void updateProductDetails(Long id, ProductDTO productDTO) {
         if (productRepository.findProductById(id).isPresent()) {
@@ -82,9 +63,8 @@ public class ProductService {
 
             updateProduct(product, patchProduct);
             productRepository.save(product);
-        } else throw (new ProductNotFoundException());
+        } else throw new ProductNotFoundException();
     }
-
 
     public void updateProduct(Product product, Product patchProduct) {
 
@@ -106,10 +86,6 @@ public class ProductService {
 
         if (patchProduct.getRating() != null) {
             product.setRating(patchProduct.getRating());
-        }
-
-        if (patchProduct.getSeller() != null) {
-            product.setSeller(patchProduct.getSeller());
         }
     }
 }
