@@ -2,6 +2,7 @@ package com.gstore.gstoreapi.services;
 
 import com.gstore.gstoreapi.converters.ObjectConverter;
 import com.gstore.gstoreapi.exceptions.SellerNotFoundException;
+import com.gstore.gstoreapi.models.constants.AccountStatus;
 import com.gstore.gstoreapi.models.dtos.SellerDTO;
 import com.gstore.gstoreapi.models.entities.Seller;
 import com.gstore.gstoreapi.repositories.SellerRepository;
@@ -9,8 +10,6 @@ import jakarta.validation.Valid;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class SellerService {
@@ -32,7 +31,7 @@ public class SellerService {
         //stream converts entities into DTOs and maps into a list
         return sellers.stream()
                 .map(sellerConverter::convertFirstToSecond)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //returns specific seller based on an id
@@ -54,46 +53,42 @@ public class SellerService {
     //saves new seller passed through DTO
     public void saveSeller(@Valid SellerDTO sellerDTO) {
         Seller seller = sellerConverter.convertSecondToFirst(sellerDTO);
+        seller.setStatus(AccountStatus.CREATED);
 
         sellerRepository.save(seller);
     }
 
     //updates seller details based on an id and DTO containing new details
     //returns true if the seller existed previously, if not returns false
-    public boolean updateSellerDetails(Long id, SellerDTO sellerDTO) {
-        boolean sellerExisting = false;
-        Optional<Seller> sellerById= sellerRepository.findSellerById(id);
-        Seller seller;
-
-        if (sellerById.isPresent()) {
-            sellerExisting = true;
-            seller = sellerById.get();
-        } else {
-            seller = new Seller();
+    public void updateSellerDetails(Long id, SellerDTO sellerDTO) {
+        if (sellerRepository.findSellerById(id).isEmpty()) {
+            throw new SellerNotFoundException();
         }
 
-        updateSeller(sellerDTO, seller);
-        sellerRepository.save(seller);
+        Seller seller = sellerRepository.findSellerById(id).get();
+        Seller patchSeller = sellerConverter.convertSecondToFirst(sellerDTO);
 
-        return sellerExisting;
+        updateSeller(seller, patchSeller);
+        sellerRepository.save(seller);
     }
 
     //updates passed seller details based on DTO passed
-    private void updateSeller(SellerDTO sellerDTO, Seller seller) {
-        if (sellerDTO.name() != null) {
-            seller.setName(sellerDTO.name());
+    private void updateSeller(Seller seller, Seller patchSeller) {
+        if (patchSeller.getName() != null) {
+            seller.setName(patchSeller.getName());
         }
 
-        if (sellerDTO.country() != null) {
-            seller.setCountry(sellerDTO.country());
+        if (patchSeller.getCountry() != null) {
+            seller.setCountry(patchSeller.getCountry());
         }
 
-        if (sellerDTO.email() != null) {
-            seller.setEmail(sellerDTO.email());
+        if (patchSeller.getEmail() != null) {
+            seller.setEmail(patchSeller.getEmail());
         }
 
-        seller.setInternational(sellerDTO.international());
-
+        if (patchSeller.getInternational() != null) {
+            seller.setInternational(patchSeller.getInternational());
+        }
     }
 
 }
